Создано с помощью Colaboratory

--- a/Py_1_Python_Task.ipynb
+++ b/Py_1_Python_Task.ipynb
@@ -131,12 +131,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"I\\n\", \"like\\n\", \"programming!\", sep=\"\\n\")"
+      ],
       "metadata": {
-        "id": "gR7Feh2on9rg"
+        "id": "gR7Feh2on9rg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aeb9958c-b2c4-445c-db3c-44dffc0553b5"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I\n",
+            "\n",
+            "like\n",
+            "\n",
+            "programming!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,12 +190,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"I\", \"like\", \"programming\", sep=\"-\", end=\"!\")"
+      ],
       "metadata": {
-        "id": "ZumSkUJ_oEzG"
+        "id": "ZumSkUJ_oEzG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3ae1c747-e8b6-454d-b1d9-ffc2dc592545"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I-like-programming!"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
