Создано с помощью Colaboratory

--- a/Py_1_Python_Task.ipynb
+++ b/Py_1_Python_Task.ipynb
@@ -195,12 +195,12 @@
       ],
       "metadata": {
         "id": "ZumSkUJ_oEzG",
+        "outputId": "3ae1c747-e8b6-454d-b1d9-ffc2dc592545",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3ae1c747-e8b6-454d-b1d9-ffc2dc592545"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,12 +226,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "text = \"Ауууу!\"\n",
+        "\n",
+        "print(text, text, sep=\"\\n\")"
+      ],
       "metadata": {
-        "id": "f8zBbiZ7s4r_"
+        "id": "f8zBbiZ7s4r_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6cb7722-9393-4d45-fbd5-dd33e6a120d4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ауууу!\n",
+            "Ауууу!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -254,12 +271,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "text = \"Ауууу!\"\n",
+        "\n",
+        "print(\"Человек:\", text, \"Эхо:\", text)"
+      ],
       "metadata": {
-        "id": "Qkokvjms2Q7K"
+        "id": "Qkokvjms2Q7K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19dff7ec-714a-43f5-c614-f4edc3b6d6e9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Человек: Ауууу! Эхо: Ауууу!\n"
+          ]
+        }
+      ]
     }
   ]
 }
