Создано с помощью Colaboratory

--- a/Py_2_Python_Task.ipynb
+++ b/Py_2_Python_Task.ipynb
@@ -41,9 +41,9 @@
       "source": [
         "\n",
         "if input()==\"Python\":\n",
-        "  print(\"ДА\")\n",
+        "    print(\"ДА\")\n",
         "else:\n",
-        " print(\"НЕТ\")"
+        "    print(\"НЕТ\")"
       ],
       "metadata": {
         "id": "AVrAB6w127UM"
@@ -64,12 +64,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "word_1 = input()\n",
+        "word_2 = input()\n",
+        "word_3 = input()\n",
+        "\n",
+        "if word_1 in \"раз\" and word_2 in \"два\" and word_3 in \"три\":\n",
+        "    print(\"ГОРИ\")\n",
+        "else:\n",
+        "    print(\"НЕ ГОРИ\")"
+      ],
       "metadata": {
-        "id": "a1cA9F4U3Hqu"
+        "id": "a1cA9F4U3Hqu",
+        "outputId": "4742b97d-990b-4232-c951-1c61066ce73a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "раз\n",
+            "у21\n",
+            "три\n",
+            "НЕ ГОРИ\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,21 +160,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "listWords=[input(),input(),input()]\n",
+        "\n",
+        "\n",
+        "if listWords[0] in \"раз\"  :\n",
+        "    print(\"ГОРИ\")\n",
+        "    return\n",
+        "\n",
+        "    print(\"НЕ ГОРИ\")"
+      ],
       "metadata": {
-        "id": "V6X17OlP4lvZ"
+        "id": "V6X17OlP4lvZ",
+        "outputId": "e5c8f94a-ba92-46d9-f9fb-2c3006386784",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "hhRhEDQV5-s8"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-31760a9f3bdc>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
