Создано с помощью Colaboratory

--- a/Py_2_Python_Task.ipynb
+++ b/Py_2_Python_Task.ipynb
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,39 +162,40 @@
       "cell_type": "code",
       "source": [
         "listWords=[input(),input(),input()]\n",
+        "listContainsWords1=[\"1\", \"2\", \"3\"]\n",
+        "listContainsWords2=[\"раз\", \"два\", \"три\"]\n",
         "\n",
         "\n",
-        "if listWords[0] in \"раз\"  :\n",
+        "def checkWords(listInput, listCheckWords):\n",
+        "  for input in listInput:\n",
+        "    if input not in  listCheckWords:\n",
+        "        return False\n",
+        "\n",
+        "    return True\n",
+        "\n",
+        "\n",
+        "if( checkWords(listWords, listContainsWords1) or  checkWords(listWords, listContainsWords2)):\n",
         "    print(\"ГОРИ\")\n",
-        "    return\n",
-        "\n",
+        "else:\n",
         "    print(\"НЕ ГОРИ\")"
       ],
       "metadata": {
         "id": "V6X17OlP4lvZ",
-        "outputId": "e5c8f94a-ba92-46d9-f9fb-2c3006386784",
+        "outputId": "1973f359-574e-4de8-aefb-45d5f7bee81a",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1\n",
-            "2\n",
-            "3\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-31760a9f3bdc>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+            "вы\n",
+            "ыф\n",
+            "ы\n",
+            "НЕ ГОРИ\n"
           ]
         }
       ]
