Создано с помощью Colaboratory

--- a/Py_2_Python_Task.ipynb
+++ b/Py_2_Python_Task.ipynb
@@ -235,12 +235,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "word= input()\n",
+        "\n",
+        "print(word,word,word,word,sep=\"\");"
+      ],
       "metadata": {
-        "id": "zQ7ZtLgY6AJ0"
+        "id": "zQ7ZtLgY6AJ0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6554c5dc-1159-4c58-b75f-f500faa31968"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "HelloHelloHelloHello\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -274,6 +291,35 @@
       "metadata": {
         "id": "f13s4hCq6Brr"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str = input()\n",
+        "\n",
+        "if(\"кот\" in str):\n",
+        "  print(\"МЯУ\")\n",
+        "else:\n",
+        "  print(\"ГАВ\")"
+      ],
+      "metadata": {
+        "id": "PKtqMrgIg6mp",
+        "outputId": "73c3ac43-d101-4cf3-a78f-3d521d906266",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Извините, пожалуйста, вы не подскажете, который час?\n",
+            "МЯУ\n"
+          ]
+        }
+      ]
     }
   ]
 }
