Создано с помощью Colaboratory

--- a/Py_5_Python_Task.ipynb
+++ b/Py_5_Python_Task.ipynb
@@ -55,10 +55,10 @@
       ],
       "metadata": {
         "id": "ZumSkUJ_oEzG",
-        "outputId": "f450ccc2-b82b-4800-a3e7-867d8c61510d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f450ccc2-b82b-4800-a3e7-867d8c61510d"
       },
       "execution_count": 2,
       "outputs": [
@@ -104,10 +104,10 @@
       ],
       "metadata": {
         "id": "Nhf6Gb6uHmy3",
-        "outputId": "542eabfc-84ee-4b6e-8ae9-5f81b37329b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "542eabfc-84ee-4b6e-8ae9-5f81b37329b3"
       },
       "execution_count": 6,
       "outputs": [
@@ -171,10 +171,10 @@
       ],
       "metadata": {
         "id": "HvERsQVoM2M-",
-        "outputId": "f1c14bce-b225-4761-c307-222c80cf9ca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1c14bce-b225-4761-c307-222c80cf9ca0"
       },
       "execution_count": 10,
       "outputs": [
@@ -226,10 +226,10 @@
       ],
       "metadata": {
         "id": "wHkhPxzfM3AF",
-        "outputId": "3538f1f9-786d-4b92-a098-a604f4d4b68f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3538f1f9-786d-4b92-a098-a604f4d4b68f"
       },
       "execution_count": 12,
       "outputs": [
@@ -298,10 +298,10 @@
       ],
       "metadata": {
         "id": "3e7hUyh_M3y1",
-        "outputId": "c315644b-7713-4d36-d477-5be0124aabb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c315644b-7713-4d36-d477-5be0124aabb2"
       },
       "execution_count": 33,
       "outputs": [
@@ -370,10 +370,10 @@
       ],
       "metadata": {
         "id": "yGRTXtTlC-8i",
-        "outputId": "1a61fdf6-2069-40a6-9ca2-616555099678",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1a61fdf6-2069-40a6-9ca2-616555099678"
       },
       "execution_count": 35,
       "outputs": [
@@ -416,16 +416,41 @@
     {
       "cell_type": "code",
       "source": [
-        "numStr = int(input())\n",
         "\n",
-        "while numStr >0\n",
-        ""
+        "numStr = int(input())\n",
+        "listStr = list()\n",
+        "sayNo=True\n",
+        "while numStr >0:\n",
+        "    text=input()\n",
+        "    if \"Кот\" in text or \"кот\" in text:\n",
+        "        print(\"МЯУ\")\n",
+        "        sayNo=False\n",
+        "\n",
+        "    numStr-=1\n",
+        "if sayNo:\n",
+        "  print(\"НЕТ\")"
       ],
       "metadata": {
-        "id": "2sOPcnNaNcRB"
+        "id": "2sOPcnNaNcRB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3414be3-48bc-460c-8653-1de20defa529"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "Количество кот\n",
+            "МЯУ\n",
+            "строки\n",
+            "кр\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -464,12 +489,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numStr = int(input())\n",
+        "listStr = list()\n",
+        "sayNo=True\n",
+        "while numStr >0:\n",
+        "    text=input()\n",
+        "    if \"Кот\" in text or \"кот\" in text:\n",
+        "\n",
+        "        sayNo=False\n",
+        "    elif \"Пёс\" in text or \"пёс\" in text:\n",
+        "        sayNo=True\n",
+        "    numStr-=1\n",
+        "if sayNo:\n",
+        "  print(\"НЕТ\")\n",
+        "else:\n",
+        "  print(\"МЯУ\")"
+      ],
       "metadata": {
-        "id": "eZfJ3HSIOv5G"
+        "id": "eZfJ3HSIOv5G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4d9346b-f3ac-4ad1-a69a-059f9c95f3bc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "Кот\n",
+            "Пёс\n",
+            "с\n",
+            "НЕТ\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -503,6 +560,39 @@
       "metadata": {
         "id": "Q9GMguAJOwPw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "listNum= [int(input()), int(input()), int(input())]\n",
+        "\n",
+        "for num1 in range(listNum[0],listNum[1]+1,listNum[2]):\n",
+        "  for num2 in range(listNum[0],listNum[1]+1,listNum[2]):\n",
+        "    print(\"{0}+{1}={2}\".format(num1,num2,num1+num2), end=\" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "WSlbmsQ18SEu",
+        "outputId": "a799d56c-464e-405d-f8e2-887d94386ea4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "8\n",
+            "3\n",
+            "2+2=4 2+5=7 2+8=10 \n",
+            "5+2=7 5+5=10 5+8=13 \n",
+            "8+2=10 8+5=13 8+8=16 \n"
+          ]
+        }
+      ]
     }
   ]
 }
