Создано с помощью Colaboratory

--- a/Py_6_Python_Task.ipynb
+++ b/Py_6_Python_Task.ipynb
@@ -195,12 +195,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def inputMale(num, listInput):\n",
+        "    while num>0:\n",
+        "        listInput.add(input())\n",
+        "        num-=1\n",
+        "\n",
+        "numEng = int(input())\n",
+        "numGe = int(input())\n",
+        "sum = numEng+ numGe\n",
+        "listMale1= set()\n",
+        "listMale2 = set()\n",
+        "\n",
+        "\n",
+        "inputMale(numEng,listMale1)\n",
+        "inputMale(numGe,listMale2)\n",
+        "\n",
+        "\n",
+        "print( len( listMale1 ^ listMale2 ))"
+      ],
       "metadata": {
-        "id": "Nhf6Gb6uHmy3"
+        "id": "Nhf6Gb6uHmy3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2c7ecf0-75c0-444b-cb60-5f78b7ca1487"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "Иванов\n",
+            "Петров\n",
+            "Васечкин\n",
+            "Иванов\n",
+            "Михайлов \n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -342,12 +379,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numMed= int(input())\n",
+        "listHerbs= list()\n",
+        "\n",
+        "while numMed > 0:\n",
+        "    numHerbs= int(input())\n",
+        "    while numHerbs > 0:\n",
+        "        herb= input()\n",
+        "        if herb  not in listHerbs:\n",
+        "            listHerbs.append(herb)\n",
+        "        numHerbs-=1\n",
+        "    numMed-=1\n",
+        "\n",
+        "for word in listHerbs:\n",
+        "    print(word,sep=\"\\n\")"
+      ],
       "metadata": {
-        "id": "HvERsQVoM2M-"
+        "id": "HvERsQVoM2M-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7aa3a56e-c7be-4021-d2e2-6d7a02a85fec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "раз\n",
+            "два\n",
+            "три\n",
+            "4\n",
+            "раз\n",
+            "два\n",
+            "три\n",
+            "четыре \n",
+            "раз\n",
+            "два\n",
+            "три\n",
+            "четыре \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -380,12 +457,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "word = input()\n",
+        "\n",
+        "if 'а' in word[0]:\n",
+        "  print(\"ДА\")\n",
+        "else:\n",
+        "  print(\"НЕТ\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "wHkhPxzfM3AF"
+        "id": "wHkhPxzfM3AF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a375e27c-efc3-4d15-803b-d3900f0c6527"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "аптека\n",
+            "ДА\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
