Создано с помощью Colaboratory

--- a/Py_6_Python_Task.ipynb
+++ b/Py_6_Python_Task.ipynb
@@ -524,12 +524,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cityBool = True\n",
+        "firstWord= input()\n",
+        "while cityBool:\n",
+        "    twoWord= input()\n",
+        "    if not firstWord.endswith(twoWord[0]):\n",
+        "        cityBool=False\n",
+        "    firstWord= twoWord\n",
+        "print(twoWord)"
+      ],
       "metadata": {
-        "id": "3e7hUyh_M3y1"
+        "id": "3e7hUyh_M3y1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be405cd3-8854-48f3-a746-57e55ba5a852"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "новгород\n",
+            "дублин\n",
+            "тула\n",
+            "тула\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
