Создано с помощью Colaboratory

--- a/Py_6_Python_Task.ipynb
+++ b/Py_6_Python_Task.ipynb
@@ -589,12 +589,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cityBool = True\n",
+        "\n",
+        "\n",
+        "\n",
+        "def func():\n",
+        "    firstWord= input()\n",
+        "    twoWord= input()\n",
+        "\n",
+        "    if firstWord.endswith(\"ь\") and twoWord.startswith(firstWord[len(firstWord)-2]):\n",
+        "        print(\"ВЕРНО\")\n",
+        "        return\n",
+        "    if firstWord.endswith(twoWord[0]):\n",
+        "        print(\"ВВЕРНО\")\n",
+        "        return\n",
+        "    print(\"НЕВЕРНО\")\n",
+        "\n",
+        "\n",
+        "func()"
+      ],
       "metadata": {
-        "id": "yGRTXtTlC-8i"
+        "id": "yGRTXtTlC-8i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "496a7d77-937c-4d9e-98b8-f2734d427aa8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "астрахань\n",
+            "новгород\n",
+            "ВЕРНО\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -627,30 +660,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "inputWord = input()\n",
+        "outputWord = str()\n",
+        "for simbol in inputWord:\n",
+        "    outputWord+= simbol+simbol\n",
+        "print(outputWord)"
+      ],
       "metadata": {
-        "id": "2sOPcnNaNcRB"
+        "id": "2sOPcnNaNcRB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34f9e8c5-a180-4f8e-b0f3-b070bb00d597"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eZfJ3HSIOv5G"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XFyndT2QoqKx"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "холодно\n",
+            "ххооллоодднноо\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -682,6 +716,39 @@
       "metadata": {
         "id": "6v25VutMoq_C"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word1 = input()\n",
+        "word2 = input()\n",
+        "bulls = 0\n",
+        "cows = 0\n",
+        "for i in set(word1) & set(word2):\n",
+        "    if word1.index(i) == word2.index(i):\n",
+        "        bulls +=1\n",
+        "    else: cows += 1\n",
+        "print(bulls, cows)\n"
+      ],
+      "metadata": {
+        "id": "bgyIG7JO7mlT",
+        "outputId": "fbf55b00-0e48-4f40-c8ba-7f3d65a7b2d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "питон\n",
+            "пилот\n",
+            "3 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -723,6 +790,17 @@
       "metadata": {
         "id": "7KZ7AWPcpgwB"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inputNum = int(input())\n"
+      ],
+      "metadata": {
+        "id": "Q7e3_jIO8bw_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
