Создано с помощью Colaboratory

--- a/Py_6_Python_Task.ipynb
+++ b/Py_6_Python_Task.ipynb
@@ -113,7 +113,7 @@
         },
         "outputId": "21d92aeb-a22c-4f6a-95aa-7401a88efe15"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
         },
         "outputId": "b2c7ecf0-75c0-444b-cb60-5f78b7ca1487"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         },
         "outputId": "7aa3a56e-c7be-4021-d2e2-6d7a02a85fec"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
         },
         "outputId": "a375e27c-efc3-4d15-803b-d3900f0c6527"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +541,7 @@
         },
         "outputId": "be405cd3-8854-48f3-a746-57e55ba5a852"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +616,7 @@
         },
         "outputId": "496a7d77-937c-4d9e-98b8-f2734d427aa8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +674,7 @@
         },
         "outputId": "34f9e8c5-a180-4f8e-b0f3-b070bb00d597"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,13 +794,36 @@
     {
       "cell_type": "code",
       "source": [
-        "inputNum = int(input())\n"
+        "inputNum = int(input())\n",
+        "listLine = list()\n",
+        "while inputNum>0:\n",
+        "    line = input()\n",
+        "    if line.lower().startswith(\"не\") :\n",
+        "       line= line[3:]\n",
+        "    print(line)\n",
+        "    inputNum-=1"
       ],
       "metadata": {
-        "id": "Q7e3_jIO8bw_"
+        "id": "Q7e3_jIO8bw_",
+        "outputId": "c99ada0d-1a70-4167-d1db-91aefabf53b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "Не суй пальцы \n",
+            "суй пальцы \n",
+            "Берегись автомобиля!\n",
+            "Берегись автомобиля!\n"
+          ]
+        }
+      ]
     }
   ]
 }
