Создано с помощью Colaboratory

--- a/Py_7_Python_Task.ipynb
+++ b/Py_7_Python_Task.ipynb
@@ -277,12 +277,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "listSoup = [\"щи\", \"борщ\", \"щавелевый суп\", \"овсяный суп\", \"суп по-чабански\"]\n",
+        "\n",
+        "numDays = int(input())\n",
+        "\n",
+        "for i in range(numDays):\n",
+        "    print(listSoup[i % 5])"
+      ],
       "metadata": {
-        "id": "wHkhPxzfM3AF"
+        "id": "wHkhPxzfM3AF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee38543e-4f14-4c87-febd-4554f25f48a2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "35\n",
+            "щи 0 0\n",
+            "борщ 1 1\n",
+            "щавелевый суп 2 2\n",
+            "овсяный суп 3 3\n",
+            "суп по-чабански 4 4\n",
+            "щи 5 0\n",
+            "борщ 6 1\n",
+            "щавелевый суп 7 2\n",
+            "овсяный суп 8 3\n",
+            "суп по-чабански 9 4\n",
+            "щи 10 0\n",
+            "борщ 11 1\n",
+            "щавелевый суп 12 2\n",
+            "овсяный суп 13 3\n",
+            "суп по-чабански 14 4\n",
+            "щи 15 0\n",
+            "борщ 16 1\n",
+            "щавелевый суп 17 2\n",
+            "овсяный суп 18 3\n",
+            "суп по-чабански 19 4\n",
+            "щи 20 0\n",
+            "борщ 21 1\n",
+            "щавелевый суп 22 2\n",
+            "овсяный суп 23 3\n",
+            "суп по-чабански 24 4\n",
+            "щи 25 0\n",
+            "борщ 26 1\n",
+            "щавелевый суп 27 2\n",
+            "овсяный суп 28 3\n",
+            "суп по-чабански 29 4\n",
+            "щи 30 0\n",
+            "борщ 31 1\n",
+            "щавелевый суп 32 2\n",
+            "овсяный суп 33 3\n",
+            "суп по-чабански 34 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -348,12 +402,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def inputStr():\n",
+        "    numStr = int(input())\n",
+        "    strList = list()\n",
+        "    while numStr>0 :\n",
+        "        strList.append(input())\n",
+        "        numStr-=1\n",
+        "    return strList\n",
+        "\n",
+        "strList = inputStr()\n",
+        "goodStudent= list()\n",
+        "for student in strList:\n",
+        "  newStudent = student.split()[1]\n",
+        "  if student.split()[1] in ('4', '5'):\n",
+        "    goodStudent.append(student)\n",
+        "\n",
+        "print('\\n'.join(strList))\n",
+        "print()\n",
+        "print('\\n'.join(goodStudent))"
+      ],
       "metadata": {
-        "id": "3e7hUyh_M3y1"
+        "id": "3e7hUyh_M3y1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3174302d-434d-4dca-9544-09eb4d6ae48f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "Иванов 4\n",
+            "Кузнецов 3\n",
+            "Федин 5\n",
+            "Круглов 2\n",
+            "Иванов 4\n",
+            "Кузнецов 3\n",
+            "Федин 5\n",
+            "Круглов 2\n",
+            "\n",
+            "Иванов 4\n",
+            "Федин 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,12 +499,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def inputStr():\n",
+        "    numStr = int(input())\n",
+        "    strList = list()\n",
+        "    while numStr>0 :\n",
+        "        strList.append(input())\n",
+        "        numStr-=1\n",
+        "    return strList\n",
+        "\n",
+        "listWave = inputStr()\n",
+        "smallWaves = []\n",
+        "for wave in range(len(listWave)-1) :\n",
+        "    if listWave[wave].split()[-1] < listWave[wave+1].split()[-1] :\n",
+        "      smallWaves.append([wave,listWave[wave]])\n",
+        "\n",
+        "for wave in smallWaves:\n",
+        "    print(wave)"
+      ],
       "metadata": {
-        "id": "yGRTXtTlC-8i"
+        "id": "yGRTXtTlC-8i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ea715fb-6250-475f-9551-af2f58dbe7fe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "море волнуется раз 5\n",
+            "море волнуется раз 3\n",
+            "море волнуется раз 6\n",
+            "море волнуется раз 2\n",
+            "море волнуется раз 8\n",
+            "[1, 'море волнуется раз 3']\n",
+            "[3, 'море волнуется раз 2']\n"
+          ]
+        }
+      ]
     }
   ]
 }
