Создано с помощью Colaboratory

--- a/Py_8_Python_Task.ipynb
+++ b/Py_8_Python_Task.ipynb
@@ -66,10 +66,10 @@
       ],
       "metadata": {
         "id": "Mxy9AgUYyaND",
-        "outputId": "432c84cb-59f3-4018-a9ce-eaf17e7cba5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "432c84cb-59f3-4018-a9ce-eaf17e7cba5e"
       },
       "execution_count": 7,
       "outputs": [
@@ -123,10 +123,10 @@
       ],
       "metadata": {
         "id": "Nhf6Gb6uHmy3",
-        "outputId": "b133a6be-b621-4a20-9b26-bcd8855d1532",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b133a6be-b621-4a20-9b26-bcd8855d1532"
       },
       "execution_count": 9,
       "outputs": [
@@ -188,10 +188,10 @@
       ],
       "metadata": {
         "id": "HvERsQVoM2M-",
-        "outputId": "56b0d530-c296-45eb-c79d-5c89a71ac9c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56b0d530-c296-45eb-c79d-5c89a71ac9c2"
       },
       "execution_count": 13,
       "outputs": [
@@ -263,10 +263,10 @@
       ],
       "metadata": {
         "id": "wHkhPxzfM3AF",
-        "outputId": "4a224cd9-4570-420a-ad56-ad1d175254b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a224cd9-4570-420a-ad56-ad1d175254b1"
       },
       "execution_count": 14,
       "outputs": [
@@ -336,10 +336,10 @@
       ],
       "metadata": {
         "id": "3e7hUyh_M3y1",
-        "outputId": "4633722a-784b-48f9-b9ba-19ed9313be68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4633722a-784b-48f9-b9ba-19ed9313be68"
       },
       "execution_count": 28,
       "outputs": [
@@ -385,12 +385,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "inputLine = input().split()\n",
+        "maxLength=0\n",
+        "for word in inputLine:\n",
+        "    if maxLength < len(word):\n",
+        "        maxLength=len(word)\n",
+        "print(maxLength)"
+      ],
       "metadata": {
-        "id": "yGRTXtTlC-8i"
+        "id": "yGRTXtTlC-8i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b2a00ea-baef-43d4-acb0-6e9607830680"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "окажем скорейшее вспомоществование\n",
+            "17\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -423,12 +443,28 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "inputLine = input()\n",
+        "print(max(inputLine.count(i) for i in inputLine))\n"
+      ],
       "metadata": {
-        "id": "6SfqS2GqNSU8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6SfqS2GqNSU8",
+        "outputId": "2f8b3211-fc04-4d9d-d151-2f83a79166c5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Длинношеееед\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -461,12 +497,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(len(\"\".join(input().split())))"
+      ],
       "metadata": {
-        "id": "l6N6_MH8IhZK"
+        "id": "l6N6_MH8IhZK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd14d43f-0f53-45e6-b2ab-512ed5eb246b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "раз два три\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -516,6 +567,49 @@
       "metadata": {
         "id": "6Jg4oponKHmp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sizeTable = input().split()\n",
+        "\n",
+        "table = []\n",
+        "buffer = []\n",
+        "for i in range(int(sizeTable[0])):\n",
+        "  buffer.clear()\n",
+        "  table.append(list(buffer))\n",
+        "  for j in range(int(sizeTable[1])):\n",
+        "    table[i].append(input())\n",
+        "\n",
+        "for i in range(len(table)):\n",
+        "    print(\" \".join(table[i]))\n"
+      ],
+      "metadata": {
+        "id": "uFc5XQHoQ0Pc",
+        "outputId": "6a470f89-9f9e-4a13-a810-f126104da005",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 2\n",
+            "тройка\n",
+            "треф\n",
+            "семёрка\n",
+            "червей\n",
+            "дама\n",
+            "пик\n",
+            "тройка\tтреф\n",
+            "семёрка\tчервей\n",
+            "дама\tпик\n"
+          ]
+        }
+      ]
     }
   ]
 }
