--- a/Py_10_Python_task.ipynb
+++ b/Py_10_Python_task.ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "VWCRmIAmj4-Y",
         "outputId": "d463b32e-f716-49a8-9e10-e35c97262803",
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,8 +210,7 @@
       "source": [
         "def template(a1,a2,a3):\n",
         "    print(\"Периметр:\", a1+a2+a3)\n",
-        "    print(\"Площадь:\", a1*a2*a3)\n",
-        ""
+        "    print(\"Площадь:\", a1*a2*a3)\n"
       ],
       "metadata": {
         "id": "UU87kGCsmriV"
@@ -251,12 +250,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def take_large_banknotes(listBanknotes):\n",
+        "    banknotes= list()\n",
+        "    for banknot in listBanknotes :\n",
+        "        if banknot>10:\n",
+        "           banknotes.append(banknot)\n",
+        "    return banknotes\n",
+        "\n",
+        "banknotes = []\n",
+        "\n",
+        "print(*take_large_banknotes([1, 5, 500, 0.5, 2, 0.1, 10, 100, 100, 1000, 50]))"
+      ],
       "metadata": {
-        "id": "51tugOTGpdG3"
+        "id": "51tugOTGpdG3",
+        "outputId": "79b35b29-b28c-4366-f08c-0936da4e4e78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "500 100 100 1000 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -308,7 +330,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def find_mountain(listCoor):\n",
+        "    row=0\n",
+        "    col=0\n",
+        "    for coordIn in listCoor:\n",
+        "        for coor in coordIn:\n",
+        "\n",
+        "    return (row,col)\n",
+        "\n",
+        "a = [[1, 3, 1], [3, 2, 5], [2, 2, 2]]\n",
+        "\n",
+        "print(find_mountain(a))"
+      ],
       "metadata": {
         "id": "sv_bSRtIqY6E"
       },
